# ray

./: .bazelrc  .travis.yml  BUILD.bazel  WORKSPACE
bazel/: ray_deps_setup.bzl
ci/travis/: ci.sh  format.sh  install-ray.sh
cmake/Modules/: ThirdpartyToolchain.cmake
cpp/: BUILD.bazel
cpp/cpp-worker-demo/myso/: CMakeLists.txt  base.h  function_traits.h  library.cpp  msgpack_codec.h  router.h
cpp/cpp-worker-demo/test_so/: CMakeLists.txt  main.cpp  msgpack_codec.h
cpp/include/future/: Future_en.md
cpp/include/ray/: api.h
cpp/src/example/: example.cc
cpp/src/ray/: agent.cc  agent.h  api.cc
deploy/ray-operator-python/:  README.md  Dockerfile  Makefile  README.md  operator.yml
deploy/ray-operator-python/controller/: constants.py  handlers.py
deploy/ray-operator-python/deploy/: 100-ns.yaml  300-rbac_role.yaml  400-csr_rbac_role_binding.yaml  v1_raycluster.yaml
deploy/yarn/: BUILD.bazel  WORKSPACE  pom.xml  pom_template.xml  ray_on_yarn.bzl
deploy/yarn/src/main/java/org/ray/yarn/: ApplicationMaster.java  ApplicationMasterState.java  Client.java  ContainerLauncher.java  DsConstants.java  NmCallbackHandler.java  RayNodeContext.java  RmCallbackHandler.java
deploy/yarn/src/main/java/org/ray/yarn/config/: AbstractConfig.java  AppConfig.java  RayClusterConfig.java
deploy/yarn/src/main/java/org/ray/yarn/utils/: TimelineUtil.java  YamlUtil.java
deploy/yarn/src/test/java/org/ray/yarn/: ApplicationMasterTest.java
deploy/yarn/src/test/java/org/ray/yarn/utils/: YamlUtilTest.java
java/: BUILD.bazel  README.rst  dependencies.bzl  pom.xml  ray.config.ini  test.sh  testng.xml
java/api/: pom.xml
java/conf/: ray.config.ini  ray.config.properties
java/fault_tolerance/: pom.xml  pom_template.xml
java/runtime/: pom.xml
java/runtime-common/: pom.xml
java/runtime-dev/: pom.xml
java/runtime-native/: pom.xml
java/streaming/: pom.xml
java/test/: pom.xml
java/tutorial/: README.rst
python/: setup.py
python/ray/: __init__.py  _raylet.pxd  _raylet.pyx  actor.py  async_compat.py  function_manager.py  gcs_utils.py  job_configs.py  job_updater.py  node.py  profiling.py  ray_constants.py  remote_function.py  serialization.py  services.py  state.py  test_utils.py  utils.py  worker.py
python/ray/dashboard/: agent.py  consts.py  master.py  (+3 more)
src/local_scheduler/: local_scheduler_client.cc  local_scheduler_client.h
src/ray/: CMakeLists.txt  id.h  id_def.h  ray_config_def.h
src/streaming/: streaming_channel.cc  streaming_channel.h  streaming_channel_meta.h  streaming_config.cc  streaming_config.h  streaming_constant.h  streaming_consumer.cc  streaming_consumer.h  streaming_default_test.cc  streaming_message.cc  streaming_message.h  streaming_metrics.cc  streaming_metrics.h  streaming_producer.cc  streaming_producer.h  streaming_strategy_implementor.cc  streaming_strategy_implementor.h  streaming_transfer.cc  streaming_transfer.h
streaming/: BUILD.bazel
streaming/java/: BUILD.bazel  dependencies.bzl  pom.xml
streaming/python/: communication.py  config.py
streaming/src/: data_writer.cc
test/: actor_test.py  runtest.py
(+854 files in other folders)
